--- a/demo/css/styles.css
+++ b/demo/css/styles.css
@@ -8,16 +8,12 @@ ul, ol, li { margin: 0; padding: 0; }
 pre[class*="language-"] > code[data-language] { overflow: auto !important; }
 section { margin: 50px 0; }
 h1 { font-size: 45px; }
-h2 { 
-  padding-top: 60px;
-  text-align: center; 
+
+h1,
+h2 {
+  text-align: center;
 }
-@media (min-width: 300px) and (max-width: 799px) {
-  h2 { padding-top: 20%; }
-}
-@media (min-width: 800px) {
-  h2 { padding-top: 160px; }
-}
+
 p { 
   margin: 0;
   padding: 0.8em 0;
@@ -25,6 +21,7 @@ p {
   font-weight: 300;
   text-align: center;
 }
+
 a:focus {
   outline: 1px solid red;
 }
